[package]
name = "hyper-tungstenite"
description = "websockets for hyper servers using tungstenite"
version = "0.9.0"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
keywords = ["websocket", "hyper", "async"]
categories = ["web-programming::websocket", "network-programming"]
repository = "https://github.com/de-vri-es/hyper-tungstenite-rs"
documentation = "https://docs.rs/hyper-tungstenite"

edition = "2021"

[dependencies]
hyper = { version = "0.14.26" }
pin-project = "1.1.0"
tokio = "1.28.1"
tokio-tungstenite = "0.19.0"
tungstenite = "0.19.0"

[dev-dependencies]
assert2 = "0.3.10"
hyper = { version = "0.14.26", features = ["http1", "server", "tcp"] }
tokio = { version = "1.28.1", features = ["net", "macros", "rt-multi-thread"] }
futures = { version = "0.3.28" }
